--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -1,6 +1,6 @@
 html, code, kbd, pre, samp {
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    text-size-adjust: 100%;
 }
 
 html, body {
@@ -28,43 +28,52 @@ pre {
 
 /* customizing bootstrap nav bar */
 .navbar {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .navbar-dark a {
-    color: #ffffff !important;
+    color: #fff !important;
     font-size: 18px !important;
     text-decoration: none;
 }
+
 .grails-icon img {
     width: 40px;
 
 }
+
 .navbar-dark, .navbar-static-top {
     background-color: #424649;
-    border: 0px;
+    border: 0;
 }
+
 a.navbar-brand {
     color: white !important;
     font-size: 19px !important;
 }
+
 .navbar-dark .navbar-nav>.active>a, .navbar-dark .navbar-nav>.active>a:hover, .navbar-dark .navbar-nav>.active>a:focus {
     background-color: transparent;
     color: white;
 }
+
 .navbar-nav>li.active>a {
     color: white !important;
 }
+
 .navbar-nav>li>a:hover {
     background-color: #2559a7 !important;
     color: white !important;
 }
+
 .navbar-nav>li>a {
     color: #c0d3db;
 }
+
 .navbar-dark .navbar-toggler .icon-bar {
     background-color: white;
 }
+
 .navbar-dark .navbar-toggle:hover, .navbar-dark .navbar-toggle:focus {
     background-color: #2559a7;
 }
@@ -87,7 +96,7 @@ a.navbar-brand {
     padding-bottom: 25px;
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
     .container {
         width: auto;
     }
@@ -95,23 +104,23 @@ a.navbar-brand {
 
 /* specific to index.html */
 
-@media (max-width: 999px) {
+@media (width <= 999px) {
     #fork-me {
         display: none;
     }
 
     .navbar {
-        padding-right: 0px;
+        padding-right: 0;
     }
 }
 
 #fork-me{
     position: fixed;
-    padding: 0px 50px 0px 50px;
+    padding: 0 50px;
     top: 40px;
     right: -60px;
     background-color: #a60000;
-    color: #ffffff;
+    color: #fff;
     font-size: 1em;
     z-index: 100;
     transform: rotate(+45deg);
@@ -123,38 +132,38 @@ a.navbar-brand {
 }
 
 #fork-me p {
-    margin: 0em 0;
+    margin: 0;
 }
 
 #band {
-    /*grey =#808080*/
+    /* grey =#808080 */
     background: #2559a7  no-repeat 50% 30%;
     height: 400px;
 }
 
 .svg #band {
-    background-image: url(../img/grails-cupsonly-logo-white.svg);
+    background-image: url("../img/grails-cupsonly-logo-white.svg");
 }
 
 .no-svg #band {
-    background-image: url(../img/groovy-logo-white.png);
+    background-image: url("../img/groovy-logo-white.png");
 }
 
-@media (max-width: 1010px) {
+@media (width <= 1010px) {
     #band {
         background-size: 90%;
         height: 300px;
     }
 }
 
-@media (max-width: 690px) {
+@media (width <= 690px) {
     #band {
         background-size: 80%;
         height: 200px;
     }
 }
 
-@media (max-width: 475px) {
+@media (width <= 475px) {
     #band {
         background-size: 70%;
         height: 100px;
@@ -176,14 +185,14 @@ a.navbar-brand {
 
 #logos-holder {
     display: inline-block;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     text-align: center;
 }
 
 #logos-holder .logo {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     display: inline-block;
     width: 100px;
     height: 80px;
@@ -192,7 +201,7 @@ a.navbar-brand {
     background-position: 50% 50%;
 }
 
-@media (min-width: 330px) {
+@media (width >= 330px) {
     #logos-holder {
         width: 320px;
     }
@@ -202,7 +211,7 @@ a.navbar-brand {
     }
 }
 
-@media (min-width: 475px) {
+@media (width >= 475px) {
     #logos-holder {
         width: 420px;
     }
@@ -212,7 +221,7 @@ a.navbar-brand {
     }
 }
 
-@media (min-width: 690px) {
+@media (width >= 690px) {
     #logos-holder {
         width: 630px;
     }
@@ -222,7 +231,7 @@ a.navbar-brand {
     }
 }
 
-@media (min-width: 1010px) {
+@media (width >= 1010px) {
     #logos-holder {
         width: 940px;
     }
@@ -237,7 +246,7 @@ a.navbar-brand {
 }
 
 .event-img {
-    margin: -20px -20px 20px -20px;
+    margin: -20px -20px 20px;
     background-repeat: no-repeat;
     background-position: 50% top;
     height: 180px;
@@ -248,19 +257,19 @@ a.navbar-brand {
     float: right;
 }
 
-@media (max-width: 1010px) {
+@media (width <= 1010px) {
     .event-logo {
         height: 100px;
     }
 }
 
-@media (max-width: 690px) {
+@media (width <= 690px) {
     .event-logo {
         height: 60px;
     }
 }
 
-@media (max-width: 475px) {
+@media (width <= 475px) {
     .event-logo {
         display: none;
     }
@@ -299,17 +308,17 @@ article .content time {
     font-size: 15px !important;
 }
 
-.anchor-link:before {
+.anchor-link::before {
     content: ' # ';
     color: lightgray;
 }
 
-.anchor-link:hover:before {
+.anchor-link:hover::before {
     color: orange;
 }
 
 code, kbd, pre, samp {
-    font-family: "Source Code Pro", "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+    font-family: "Source Code Pro", Consolas, Monaco, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 }
 
 #contribute-btn {
@@ -317,12 +326,12 @@ code, kbd, pre, samp {
     right: 15px;
 }
 
-@media (max-width: 767px) {
+@media (width <= 767px) {
     #contribute-btn {
         width: 100%;
         position: relative;
         margin-top: 30px;
-        right: 0px;
+        right: 0;
     }
 
     #contribute-btn button {
@@ -331,7 +340,7 @@ code, kbd, pre, samp {
     }
 }
 
-@media (min-width: 1200px) {
+@media (width >= 1200px) {
     #contribute-btn {
         top: 25px;
         right: 15px;
@@ -342,7 +351,7 @@ code, kbd, pre, samp {
     float: right;
     font-size: 30px;
     padding: 15px;
-    margin: 10px 0px 10px 20px;
+    margin: 10px 0 10px 20px;
     border: 2px solid #db4800;
     border-radius: 6px;
     background-color: #db4800;
@@ -372,7 +381,7 @@ code, kbd, pre, samp {
     float: left;
 }
 
-@media (max-width: 988px) {
+@media (width <= 988px) {
     .col1, .col2 {
         width: 98% !important;
         max-width: 98%;
@@ -467,12 +476,12 @@ h8 {
     font-size: 14px
 }
 
-#footer .colset-3-footer:before, #footer .colset-3-footer:after {
+#footer .colset-3-footer::before, #footer .colset-3-footer::after {
     content: " ";
     display: table
 }
 
-#footer .colset-3-footer:after {
+#footer .colset-3-footer::after {
     clear: both
 }
 
@@ -530,12 +539,12 @@ h8 {
     text-align: center
 }
 
-.band .item:before, .band .item:after {
+.band .item::before, .band .item::after {
     content: " ";
     display: table
 }
 
-.band .item:after {
+.band .item::after {
     clear: both
 }
 
@@ -568,12 +577,12 @@ h8 {
     margin-bottom: 30px
 }
 
-#content .colset-2-its:before, #content .colset-2-its:after {
+#content .colset-2-its::before, #content .colset-2-its::after {
     content: " ";
     display: table
 }
 
-#content .colset-2-its:after {
+#content .colset-2-its::after {
     clear: both
 }
 
@@ -607,12 +616,12 @@ h8 {
     padding: 10px 0
 }
 
-#content .colset-2-its article:before, #content .colset-2-its article:after {
+#content .colset-2-its article::before, #content .colset-2-its article::after {
     content: " ";
     display: table
 }
 
-#content .colset-2-its article:after {
+#content .colset-2-its article::after {
     clear: both
 }
 
@@ -620,7 +629,7 @@ h8 {
     display: block;
     width: 80px;
     height: 80px;
-    background-image: url(../images/icons-colset-2-its.png);
+    background-image: url("../images/icons-colset-2-its.png");
     float: left;
     margin-top: 12px;
     margin-right: 15px
@@ -684,12 +693,12 @@ h8 {
     float: left;
     width: 29%;
     margin: 10px 2%;
-    -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1)
+    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 10%);
+    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 10%)
 }
 
 #content .colset-3-article article .img {
-    margin: -20px -20px 20px -20px;
+    margin: -20px -20px 20px;
     background-position: center top;
     height: 180px
 }
@@ -809,8 +818,8 @@ ul.nav-sidebar li.active a {
     border-top: 1px solid #EEE
 }
 
-*, *:after, *::before {
-    -moz-box-sizing: border-box;
+*, *::after, *::before {
+    box-sizing: border-box;
     box-sizing: border-box
 }
 
@@ -830,7 +839,7 @@ html, body, .st-container, .st-pusher, .st-content {
     overflow: auto
 }
 
-.sign-in-fa-icon:before {
+.sign-in-fa-icon::before {
     font-family: FontAwesome;
     content: '\f090';
     padding-right: 10px;
@@ -859,7 +868,7 @@ html, body, .st-container, .st-pusher, .st-content {
     left: 0;
     z-index: 99;
     height: 100%;
-    -webkit-transition: -webkit-transform .5s;
+    transition: -webkit-transform .5s;
     transition: transform .5s
 }
 
@@ -869,10 +878,10 @@ html, body, .st-container, .st-pusher, .st-content {
     right: 0;
     width: 0;
     height: 0;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgb(0 0 0 / 30%);
     content: '';
     opacity: 0;
-    -webkit-transition: opacity .5s, width .1s .5s, height .1s .5s;
+    transition: opacity .5s, width .1s .5s, height .1s .5s;
     transition: opacity .5s, width .1s .5s, height .1s .5s
 }
 
@@ -880,7 +889,7 @@ html, body, .st-container, .st-pusher, .st-content {
     width: 100%;
     height: 100%;
     opacity: 1;
-    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
     transition: opacity .5s
 }
 
@@ -893,7 +902,7 @@ html, body, .st-container, .st-pusher, .st-content {
     width: 300px;
     height: 100%;
     background: #2559a7;
-    -webkit-transition: all .5s;
+    transition: all .5s;
     transition: all .5s;
     right: -600px
 }
@@ -904,10 +913,10 @@ html, body, .st-container, .st-pusher, .st-content {
     right: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgb(0 0 0 / 20%);
     content: '';
     opacity: 1;
-    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
     transition: opacity .5s
 }
 
@@ -915,7 +924,7 @@ html, body, .st-container, .st-pusher, .st-content {
     width: 0;
     height: 0;
     opacity: 0;
-    -webkit-transition: opacity .5s, width .1s .5s, height .1s .5s;
+    transition: opacity .5s, width .1s .5s, height .1s .5s;
     transition: opacity .5s, width .1s .5s, height .1s .5s
 }
 
@@ -929,7 +938,7 @@ html, body, .st-container, .st-pusher, .st-content {
     margin: 0;
     padding: 1em;
     color: white;
-    text-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+    text-shadow: 0 0 1px rgb(0 0 0 / 10%);
     font-weight: 300;
     font-size: 2em
 }
@@ -943,9 +952,9 @@ html, body, .st-container, .st-pusher, .st-content {
     position: relative;
     padding: 1em 1em 1em 45px;
     outline: 0;
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 -1px rgb(0 0 0 / 20%);
     color: #f3efe0;
-    text-shadow: 0 0 1px rgba(255, 255, 255, 0.1);
+    text-shadow: 0 0 1px rgb(255 255 255 / 10%);
     letter-spacing: 1px;
     font-weight: 400;
     text-decoration: none
@@ -967,34 +976,34 @@ html, body, .st-container, .st-pusher, .st-content {
 }
 
 .st-menu ul li:first-child a {
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2), inset 0 1px rgba(0, 0, 0, 0.2)
+    box-shadow: inset 0 -1px rgb(0 0 0 / 20%), inset 0 1px rgb(0 0 0 / 20%)
 }
 
 .st-menu ul li a:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0);
+    background: rgb(0 0 0 / 20%);
+    box-shadow: inset 0 -1px rgb(0 0 0 / 0%);
     color: #fff
 }
 
 .st-effect-9.st-container {
-    -webkit-perspective: 10000px;
+    perspective: 10000px;
     perspective: 10000px
 }
 
 .st-effect-9 .st-pusher {
-    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
     transform-style: preserve-3d
 }
 
 .st-effect-9.st-menu-open .st-pusher {
-    -webkit-transform: translate3d(0, 0, -300px);
+    transform: translate3d(0, 0, -300px);
     transform: translate3d(0, 0, -300px)
 }
 
 .st-effect-9.st-menu {
     right: -600px;
     opacity: 1;
-    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0)
 }
 
@@ -1017,7 +1026,7 @@ html, body, .st-container, .st-pusher, .st-content {
     float: left;
     margin-right: 40px;
     margin-top: 1em;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     width: 300px;
     height: auto;
 }
@@ -1045,7 +1054,7 @@ html, body, .st-container, .st-pusher, .st-content {
 .presentations .urls {
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (width <= 767px) {
     .presentations .img.screenshot, .video .metadata {
         float: none;
     }
