--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -1,7 +1,7 @@
 /* FONT STACK */
 body,
 input, select, textarea {
-    font-family: "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: "Open Sans", HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -12,15 +12,16 @@ h1, h2, h3, h4, h5, h6 {
 
 html {
     background-color: #ddd;
-    background-image: -moz-linear-gradient(center top, #aaa, #ddd);
+    background-image: linear-gradient(center top, #aaa, #ddd);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #aaa), color-stop(1, #ddd));
     background-image: linear-gradient(to bottom, #aaa, #ddd);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#aaaaaa', EndColorStr = '#dddddd');
     background-repeat: no-repeat;
     height: 100%;
+
     /* change the box model to exclude the padding from the calculation of 100% height (IE8+) */
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -34,10 +35,10 @@ html * {
 
 body {
     background-color: #F5F5F5;
-    color: #333333;
+    color: #333;
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-    -moz-box-shadow: 0 0 0.3em #424649;
-    -webkit-box-shadow: 0 0 0.3em #424649;
+    box-shadow: 0 0 0.3em #424649;
+    box-shadow: 0 0 0.3em #424649;
     box-shadow: 0 0 0.3em #424649;
 }
 
@@ -52,7 +53,7 @@ a:hover, a:active {
 h1, h2, h3 {
     font-weight: normal;
     font-size: 1.25em;
-    margin: 0.8em 0 0.3em 0;
+    margin: 0.8em 0 0.3em;
 }
 
 ul {
@@ -74,8 +75,8 @@ img {
 }
 
 .content h1 {
-    border-bottom: 1px solid #CCCCCC;
-    padding: 0 0 1em 0;
+    border-bottom: 1px solid #CCC;
+    padding: 0 0 1em;
 }
 
 .scaffold-list h1 {
@@ -97,7 +98,7 @@ img {
 
 .footer {
     background: #424649;
-    color: #ffffff;
+    color: #fff;
     clear: both;
     font-size: 1em;
     padding: 2em 0;
@@ -109,7 +110,7 @@ img {
 }
 
 .spinner {
-    background: url(../images/spinner.gif) 50% 50% no-repeat transparent;
+    background: url("../images/spinner.gif") 50% 50% no-repeat transparent;
     height: 16px;
     width: 16px;
     padding: 0.5em;
@@ -140,35 +141,35 @@ img {
 }
 
 .nav a {
-    color: #666666;
+    color: #666;
     display: block;
     padding: 0.25em 0.7em;
     text-decoration: none;
-    -moz-border-radius: 0.3em;
-    -webkit-border-radius: 0.3em;
+    border-radius: 0.3em;
+    border-radius: 0.3em;
     border-radius: 0.3em;
 }
 
 .nav li.dropdown-item a {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
+    border-radius: 0;
+    border-radius: 0;
     border-radius: 0;
 }
 
 .nav a:active, .nav a:visited {
-    color: #666666;
+    color: #666;
 }
 
 .nav a:focus, .nav a:hover {
-    background-color: #999999;
-    color: #ffffff;
+    background-color: #999;
+    color: #fff;
     outline: none;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 80%);
 }
 
 .no-borderradius .nav a:focus, .no-borderradius .nav a:hover {
     background-color: transparent;
-    color: #444444;
+    color: #444;
     text-decoration: underline;
 }
 
@@ -179,15 +180,15 @@ img {
 }
 
 .nav a.home {
-    background-image: url(../images/skin/house.png);
+    background-image: url("../images/skin/house.png");
 }
 
 .nav a.list {
-    background-image: url(../images/skin/database_table.png);
+    background-image: url("../images/skin/database_table.png");
 }
 
 .nav a.create {
-    background-image: url(../images/skin/database_add.png);
+    background-image: url("../images/skin/database_add.png");
 }
 
 .nav li.dropdown.show ul.dropdown-menu {
@@ -198,7 +199,7 @@ img {
 
 fieldset,
 .property-list {
-    margin: 0.6em 1.25em 0 1.25em;
+    margin: 0.6em 1.25em 0;
     padding: 0.3em 1.8em 1.25em;
     position: relative;
     zoom: 1;
@@ -217,7 +218,7 @@ fieldset,
 
 .fieldcontain label,
 .fieldcontain .property-label {
-    color: #666666;
+    color: #666;
     text-align: right;
     width: 25%;
 }
@@ -239,7 +240,7 @@ label {
 
 input, select, textarea {
     background-color: #fcfcfc;
-    border: 1px solid #cccccc;
+    border: 1px solid #ccc;
     font-size: 1em;
     padding: 0.2em 0.4em;
 }
@@ -259,23 +260,23 @@ textarea {
     vertical-align: top;
 }
 
-input[type=checkbox], input[type=radio] {
+input[type="checkbox"], input[type="radio"] {
     background-color: transparent;
     border: 0;
     padding: 0;
 }
 
 input:focus, select:focus, textarea:focus {
-    background-color: #ffffff;
-    border: 1px solid #eeeeee;
+    background-color: #fff;
+    border: 1px solid #eee;
     outline: 0;
-    -moz-box-shadow: 0 0 0.5em #ffffff;
-    -webkit-box-shadow: 0 0 0.5em #ffffff;
-    box-shadow: 0 0 0.5em #ffffff;
+    box-shadow: 0 0 0.5em #fff;
+    box-shadow: 0 0 0.5em #fff;
+    box-shadow: 0 0 0.5em #fff;
 }
 
 .required-indicator {
-    color: #cc0000;
+    color: #c00;
     display: inline-block;
     font-weight: bold;
     margin-left: 0.3em;
@@ -297,13 +298,13 @@ ul.one-to-many li.add {
 
 fieldset.embedded {
     background-color: transparent;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #CCC;
     margin-left: 0;
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
+    box-shadow: none;
+    box-shadow: none;
     box-shadow: none;
 }
 
@@ -323,18 +324,18 @@ fieldset.embedded legend {
     background: #f3f3ff;
     border: 1px solid #b2d1ff;
     color: #006dba;
-    -moz-box-shadow: 0 0 0.25em #b2d1ff;
-    -webkit-box-shadow: 0 0 0.25em #b2d1ff;
+    box-shadow: 0 0 0.25em #b2d1ff;
+    box-shadow: 0 0 0.25em #b2d1ff;
     box-shadow: 0 0 0.25em #b2d1ff;
 }
 
 .errors {
     background: #fff3f3;
-    border: 1px solid #ffaaaa;
-    color: #cc0000;
-    -moz-box-shadow: 0 0 0.25em #ff8888;
-    -webkit-box-shadow: 0 0 0.25em #ff8888;
-    box-shadow: 0 0 0.25em #ff8888;
+    border: 1px solid #faa;
+    color: #c00;
+    box-shadow: 0 0 0.25em #f88;
+    box-shadow: 0 0 0.25em #f88;
+    box-shadow: 0 0 0.25em #f88;
 }
 
 .errors ul,
@@ -344,12 +345,12 @@ fieldset.embedded legend {
 
 .errors li {
     list-style: none;
-    background: transparent url(../images/skin/exclamation.png) 0.5em 50% no-repeat;
+    background: transparent url("../images/skin/exclamation.png") 0.5em 50% no-repeat;
     text-indent: 2.2em;
 }
 
 .message {
-    background: transparent url(../images/skin/information.png) 0.5em 50% no-repeat;
+    background: transparent url("../images/skin/information.png") 0.5em 50% no-repeat;
     text-indent: 2.2em;
 }
 
@@ -357,28 +358,28 @@ fieldset.embedded legend {
 
 .error input, .error select, .error textarea {
     background: #fff3f3;
-    border-color: #ffaaaa;
-    color: #cc0000;
+    border-color: #faa;
+    color: #c00;
 }
 
 .error input:focus, .error select:focus, .error textarea:focus {
-    -moz-box-shadow: 0 0 0.5em #ffaaaa;
-    -webkit-box-shadow: 0 0 0.5em #ffaaaa;
-    box-shadow: 0 0 0.5em #ffaaaa;
+    box-shadow: 0 0 0.5em #faa;
+    box-shadow: 0 0 0.5em #faa;
+    box-shadow: 0 0 0.5em #faa;
 }
 
 /* same effects for browsers that support HTML5 client-side validation (these have to be specified separately or IE will ignore the entire rule) */
 
 input:invalid, select:invalid, textarea:invalid {
     background: #fff3f3;
-    border-color: #ffaaaa;
-    color: #cc0000;
+    border-color: #faa;
+    color: #c00;
 }
 
 input:invalid:focus, select:invalid:focus, textarea:invalid:focus {
-    -moz-box-shadow: 0 0 0.5em #ffaaaa;
-    -webkit-box-shadow: 0 0 0.5em #ffaaaa;
-    box-shadow: 0 0 0.5em #ffaaaa;
+    box-shadow: 0 0 0.5em #faa;
+    box-shadow: 0 0 0.5em #faa;
+    box-shadow: 0 0 0.5em #faa;
 }
 
 /* TABLES */
@@ -411,11 +412,11 @@ td, th {
 
 th {
     background-color: #efefef;
-    background-image: -moz-linear-gradient(top, #ffffff, #eaeaea);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #eaeaea));
+    background-image: linear-gradient(top, #fff, #eaeaea);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #eaeaea));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#ffffff', EndColorStr = '#eaeaea');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#eaeaea')";
-    color: #666666;
+    filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#eaeaea')";
+    color: #666;
     font-weight: bold;
     line-height: 1.7em;
     padding: 0.2em 0.6em;
@@ -431,11 +432,11 @@ th a {
 }
 
 th a:link, th a:visited {
-    color: #666666;
+    color: #666;
 }
 
 th a:hover, th a:focus {
-    color: #333333;
+    color: #333;
 }
 
 th.sortable a {
@@ -445,11 +446,11 @@ th.sortable a {
 }
 
 th.asc a {
-    background-image: url(../images/skin/sorted_asc.gif);
+    background-image: url("../images/skin/sorted_asc.gif");
 }
 
 th.desc a {
-    background-image: url(../images/skin/sorted_desc.gif);
+    background-image: url("../images/skin/sorted_desc.gif");
 }
 
 .odd {
@@ -457,7 +458,7 @@ th.desc a {
 }
 
 .even {
-    background: #ffffff;
+    background: #fff;
 }
 
 th:hover, tr:hover {
@@ -471,36 +472,36 @@ th:hover, tr:hover {
     margin: 0.8em 1em 0.3em;
     padding: 0.3em 0.2em;
     text-align: center;
-    -moz-box-shadow: 0 0 3px 1px #AAAAAA;
-    -webkit-box-shadow: 0 0 3px 1px #AAAAAA;
-    box-shadow: 0 0 3px 1px #AAAAAA;
+    box-shadow: 0 0 3px 1px #AAA;
+    box-shadow: 0 0 3px 1px #AAA;
+    box-shadow: 0 0 3px 1px #AAA;
     background-color: #EFEFEF;
 }
 
 .pagination a,
 .pagination .currentStep {
-    color: #666666;
+    color: #666;
     display: inline-block;
     margin: 0 0.1em;
     padding: 0.25em 0.7em;
     text-decoration: none;
-    -moz-border-radius: 0.3em;
-    -webkit-border-radius: 0.3em;
+    border-radius: 0.3em;
+    border-radius: 0.3em;
     border-radius: 0.3em;
 }
 
 .pagination a:hover, .pagination a:focus,
 .pagination .currentStep {
-    background-color: #999999;
-    color: #ffffff;
+    background-color: #999;
+    color: #fff;
     outline: none;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 80%);
 }
 
 .no-borderradius .pagination a:hover, .no-borderradius .pagination a:focus,
 .no-borderradius .pagination .currentStep {
     background-color: transparent;
-    color: #444444;
+    color: #444;
     text-decoration: underline;
 }
 
@@ -510,10 +511,10 @@ th:hover, tr:hover {
     background-color: #efefef;
     overflow: hidden;
     padding: 0.3em;
-    -moz-box-shadow: 0 0 3px 1px #aaaaaa;
-    -webkit-box-shadow: 0 0 3px 1px #aaaaaa;
-    box-shadow: 0 0 3px 1px #aaaaaa;
-    margin: 0.1em 0 0 0;
+    box-shadow: 0 0 3px 1px #aaa;
+    box-shadow: 0 0 3px 1px #aaa;
+    box-shadow: 0 0 3px 1px #aaa;
+    margin: 0.1em 0 0;
     border: none;
 }
 
@@ -521,34 +522,33 @@ th:hover, tr:hover {
 .buttons a {
     background-color: transparent;
     border: 0;
-    color: #666666;
+    color: #666;
     cursor: pointer;
     display: inline-block;
-    margin: 0 0.25em 0;
+    margin: 0 0.25em;
     overflow: visible;
     padding: 0.25em 0.7em;
     text-decoration: none;
-
-    -moz-border-radius: 0.3em;
-    -webkit-border-radius: 0.3em;
+    border-radius: 0.3em;
+    border-radius: 0.3em;
     border-radius: 0.3em;
 }
 
 .buttons input:hover, .buttons input:focus,
 .buttons a:hover, .buttons a:focus {
-    background-color: #999999;
-    color: #ffffff;
+    background-color: #999;
+    color: #fff;
     outline: none;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 80%);
+    box-shadow: none;
+    box-shadow: none;
     box-shadow: none;
 }
 
 .no-borderradius .buttons input:hover, .no-borderradius .buttons input:focus,
 .no-borderradius .buttons a:hover, .no-borderradius .buttons a:focus {
     background-color: transparent;
-    color: #444444;
+    color: #444;
     text-decoration: underline;
 }
 
@@ -559,15 +559,15 @@ th:hover, tr:hover {
 }
 
 .buttons .delete {
-    background-image: url(../images/skin/database_delete.png);
+    background-image: url("../images/skin/database_delete.png");
 }
 
 .buttons .edit {
-    background-image: url(../images/skin/database_edit.png);
+    background-image: url("../images/skin/database_edit.png");
 }
 
 .buttons .save {
-    background-image: url(../images/skin/database_save.png);
+    background-image: url("../images/skin/database_save.png");
 }
 
 a.skip {
