--- a/grails-app/assets/stylesheets/mobile.css
+++ b/grails-app/assets/stylesheets/mobile.css
@@ -1,6 +1,6 @@
 /* Styles for mobile devices */
 
-@media screen and (max-width: 480px) {
+@media screen and (width <= 480px) {
     .nav {
         padding: 0.5em;
     }
@@ -36,13 +36,13 @@
 
     input, textarea {
         width: 100%;
-           -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-            -ms-box-sizing: border-box;
+           box-sizing: border-box;
+        box-sizing: border-box;
+            box-sizing: border-box;
                 box-sizing: border-box;
     }
 
-    select, input[type=checkbox], input[type=radio], input[type=submit], input[type=button], input[type=reset] {
+    select, input[type="checkbox"], input[type="radio"], input[type="submit"], input[type="button"], input[type="reset"] {
         width: auto;
     }
 
@@ -66,7 +66,7 @@
     .fieldcontain .property-value {
         display: block;
         float: none;
-        margin: 0 0 0.25em 0;
+        margin: 0 0 0.25em;
         text-align: left;
         width: auto;
     }
